Added support for logs
