# src/middleware/requestLogging.ts
@@ -1,17 +1,39 @@
 import { Context, Next } from 'hono';
+import { prisma } from '../lib/prisma';
 
-/**
- * Log the information about the HTTP requests sent to the API
- * @param c
- * @param next
- */
 async function logRequests(c: Context, next: Next) {
    const start = Date.now();
 
+   const requestSizeBytes = Number(c.req.header('content-length')) || null;
+
    await next();
 
-   const duration = Date.now() - start;
-   const user = c.get('user') || { username: 'Guest' };
+   const durationMs = Date.now() - start;
+   const user = c.get('user');
+
+   const responseSizeBytes = Number(c.res.headers.get('content-length')) || null;
+
+   try {
+      await prisma.log.create({
+         data: {
+            user: user?.id
+               ? {
+                    connect: {
+                       id: user.id
+                    }
+                 }
+               : undefined,
+            endpoint: c.req.path,
+            method: c.req.method,
+            durationMs,
+            code: String(c.res.status),
+            requestSizeBytes,
+            responseSizeBytes
+         }
+      });
+   } catch (error) {
+      console.error('Failed to save request log:', error);
+   }
 
    const time = new Date().toLocaleTimeString('en-GB', {
       hour: '2-digit',
@@ -19,7 +41,8 @@ async function logRequests(c: Context, next: Next) {
    });
 
    console.log(
-      `${time} - ${user.username}: ${c.req.method} ${c.req.path} ${c.res.status} - ${duration}ms`
+      `${time} - ${user?.username ?? 'Guest'}: ` +
+         `${c.req.method} ${c.req.path} ${c.res.status} - ${durationMs}ms`
    );
 }
 
